--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="https://i.imgur.com/41gxW9o.png" alt="XをTwitterに変換するツール" class="header-image" />
+        <img src="logo.png" alt="XをTwitterに変換するツール" class="header-image" />
     </header>
 <br>
     <main class="container">
