注意文の変更

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <p>とくにないです</p>
     <br>
     <h3>注意</h3>
-    <p>リンクを含めて変換するとリンク先に飛べますが、もしかしたら危険なサイトかもしれませんよ？責任とりませんからね？(ಡωಡ)ﾆﾔﾆﾔ</p>
+    <p>リンクを含めて変換するとリンク先に飛べますが、もしかしたら危険なサイトかもしれませんから気を付けてください。</p>
     <footer class="footer">
-        <p>© 2024 XをTwitterに変換するツール</p>
+        <p>© 2024 yui</p>
     </footer>
 </body>
 </html>
